immplementacion v8
