# src/main/java/com/prueba/gestionbanca/model/Movements.java
@@ -1,5 +1,6 @@
 package com.prueba.gestionbanca.model;
 
+import com.fasterxml.jackson.annotation.JsonInclude;
 import com.prueba.gestionbanca.util.EnumOperationType;
 import java.math.BigDecimal;
 import java.util.Date;
@@ -25,6 +26,18 @@ public class Movements {
   private String numberOperation;
 
   private Date dateOperation;
+
+  @JsonInclude(JsonInclude.Include.NON_NULL)
+  private String numberAccountDestiny;
+
+  @JsonInclude(JsonInclude.Include.NON_NULL)
+  private String numberAccountFrom;
+
+  @JsonInclude(JsonInclude.Include.NON_NULL)
+  private String nameTerceryAccount;
+
+  @JsonInclude(JsonInclude.Include.NON_NULL)
+  private String numberDocumentTerceryAccount;
 
   private EnumOperationType operationType;
 
